--- a/udemy_cources/flask_blog_with_sql/templates/index.html
+++ b/udemy_cources/flask_blog_with_sql/templates/index.html
@@ -8,7 +8,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Angela's Blog</h1>
-            <span class="subheading">A collection of Angela's random musings.</span>
+            <span class="subheading">A collection of Random stuff.</span>
           </div>
         </div>
       </div>
